# KRPC

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.h  user.proto
example/callee/: CMakeLists.txt  Kfriendservice.cc  Kservice.cc
example/caller/: CMakeLists.txt  Kclient.cc  Kfriendclient.cc
example/proto/: friend.proto
logs/: MyRPC.INFO  MyRPC.fmt-virtual-machine.fmt.log.INFO.20250610-161657.12624
src/: CMakeLists.txt  Krpcchannel.cc
src/include/: KrpcLogger.h  Krpcapplication.h  Krpcchannel.h  Krpcconfig.h  Krpccontroller.h  Krpcprovider.h  zookeeperutil.h
